// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details SideBar Panel displays a resource of type file on a private page updates when the shareTree updates 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]"></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <tr data-testid="shared-via">
        <th scope="col" class="oc-pr-s">Shared via</th>
        <td>
          <router-link-stub><span></span></router-link-stub>
        </td>
      </tr>
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page updates when the shareTree updates 2`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub></oc-spinner-stub>
    </div>
    <div data-testid="sharingInfo" class="oc-flex oc-flex-middle oc-my-m">
      <oc-status-indicators-stub resource="[object Object]" indicators="[object Object]"></oc-status-indicators-stub>
      <p class="oc-my-rm oc-mx-s">This file has been shared.</p>
    </div>
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <tr data-testid="shared-via">
        <th scope="col" class="oc-pr-s">Shared via</th>
        <td>
          <router-link-stub><span>/Shares/123.png</span></router-link-stub>
        </td>
      </tr>
      <tr data-testid="shared-by">
        <th scope="col" class="oc-pr-s">Shared by</th>
        <td><span>Marie Curie</span></td>
      </tr>
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info and (me) as owner 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <!---->
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Marie
            <span data-msgid="(me)" data-current-language="en_US">(me)</span>
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info, share info, share date and preview 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub></oc-spinner-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <tr data-testid="shared-via">
        <th scope="col" class="oc-pr-s">Shared via</th>
        <td>
          <router-link-stub><span></span></router-link-stub>
        </td>
      </tr>
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a private page with timestamp, size info, share info, share date and preview running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub></oc-spinner-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <tr data-testid="shared-via">
        <th scope="col" class="oc-pr-s">Shared via</th>
        <td>
          <router-link-stub><span></span></router-link-stub>
        </td>
      </tr>
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th scope="col" class="oc-pr-s">FUSE Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">/Shares/123.png</p>
            <oc-button-stub aria-label="Copy FUSE path" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home/Shares/123.png</p>
            <oc-button-stub aria-label="Copy direct link" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a public page with owner, timestamp, size info, no share info and preview 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub></oc-spinner-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type file on a public page with owner, timestamp, size info, no share info and preview running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <div data-testid="preview" class="details-preview oc-flex oc-flex-middle oc-flex-center oc-mb" style="background-image: none;">
      <oc-spinner-stub></oc-spinner-stub>
    </div>
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th scope="col" class="oc-pr-s">FUSE Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">/Shares/123.png</p>
            <oc-button-stub aria-label="Copy FUSE path" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home/Shares/123.png</p>
            <oc-button-stub aria-label="Copy direct link" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info and (me) as owner 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <!---->
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Marie
            <span data-msgid="(me)" data-current-language="en_US">(me)</span>
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info, share info and share date 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <!---->
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a private page with timestamp, size info, share info and share date running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <!---->
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th scope="col" class="oc-pr-s">FUSE Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate"></p>
            <oc-button-stub aria-label="Copy FUSE path" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home</p>
            <oc-button-stub aria-label="Copy direct link" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a public page with owner, timestamp, size info and no share info 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <!---->
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <!---->
      <!---->
    </table>
  </div>
</div>
`;

exports[`Details SideBar Panel displays a resource of type folder on a public page with owner, timestamp, size info and no share info running on eos 1`] = `
<div id="oc-file-details-sidebar">
  <div>
    <!---->
    <!---->
    <table aria-label="Overview of the information about the selected file" class="details-table">
      <tr data-testid="timestamp">
        <th scope="col" class="oc-pr-s">Last modified</th>
        <td><span>ABSOLUTE_TIME</span></td>
      </tr>
      <!---->
      <!---->
      <tr data-testid="ownerDisplayName">
        <th scope="col" class="oc-pr-s">Owner</th>
        <td>
          <p class="oc-m-rm">
            Einstein
            <!---->
            <!---->
          </p>
        </td>
      </tr>
      <tr data-testid="sizeInfo">
        <th scope="col" class="oc-pr-s">Size</th>
        <td>740 B</td>
      </tr>
      <!---->
      <tr>
        <th scope="col" class="oc-pr-s">FUSE Path</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate"></p>
            <oc-button-stub aria-label="Copy FUSE path" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
      <tr>
        <th scope="col" class="oc-pr-s">Direct link</th>
        <td>
          <div class="oc-flex oc-flex-middle oc-flex-between oc-width-1-1">
            <p class="oc-my-rm oc-text-truncate">undefinedfiles/spaces/personal/home</p>
            <oc-button-stub aria-label="Copy direct link" appearance="raw" variation="passive">
              <oc-icon-stub name="clipboard"></oc-icon-stub>
            </oc-button-stub>
          </div>
        </td>
      </tr>
    </table>
  </div>
</div>
`;
